[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket_cloud_client_nekozzz94"
version = "1.0"
authors = [
  { name="nekozzz94", email="kidpooh1608@gmail.com" },
]
description = "SDK for Bitbucket Cloud"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nekozzz94/bitbucket-cloud-client"
Issues = "https://github.com/nekozzz94/bitbucket-cloud-client/issues"